<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btn_close"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/colorAccent"
                    app:srcCompat="@drawable/ic_close"
                    tools:ignore="VectorDrawableCompat" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/add"
                    android:textAppearance="@style/TextViewStyleBold" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btn_save"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/colorAccent"
                    app:srcCompat="@drawable/ic_done"
                    tools:ignore="VectorDrawableCompat" />

            </LinearLayout>


        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_title"
                    style="@style/EditTextStyleRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:inputType="textNoSuggestions|textCapWords"
                    android:maxLength="100"
                    app:layout_constraintBottom_toTopOf="@+id/et_note"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_note"
                    style="@style/EditTextStyleRegular"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:gravity="start"
                    android:hint="@string/note_hint"
                    android:inputType="textNoSuggestions|textMultiLine"
                    android:overScrollMode="always"
                    app:layout_constraintBottom_toTopOf="@+id/view"
                    app:layout_constraintEnd_toEndOf="@+id/et_title"
                    app:layout_constraintStart_toStartOf="@+id/et_title"
                    app:layout_constraintTop_toBottomOf="@+id/et_title" />

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_note" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</layout>